Fixed z-index of back to top while on mobile

--- a/src/7-layout/back-to-top/_index.scss
+++ b/src/7-layout/back-to-top/_index.scss
@@ -29,7 +29,7 @@
   position: fixed;
   right: 45px;
   bottom: 45px;
-  z-index: 1;
+  z-index: 2;
 
   transition: background-color 0.3s ease;
 
